<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2017 by Tran Le Duy
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:checkableBehavior="single"
        android:visible="true">
        <item
            android:id="@+id/action_image_to_ascii"
            android:title="@string/image_to_ascii" />
        <item
            android:id="@+id/action_big_text"
            android:title="@string/big_text" />
        <item
            android:id="@+id/action_ascii_art"
            android:title="@string/ascii_art" />
        <item
            android:id="@+id/action_emoji"
            android:title="@string/emoji" />
        <item
            android:id="@+id/action_emoji_art"
            android:title="@string/emoji_art" />
        <item
            android:id="@+id/action_emoticon"
            android:title="@string/emoticons" />

        <item
            android:id="@+id/action_symbol"
            android:title="@string/cool_symbol" />

        <item
            android:id="@+id/action_figlet"
            android:title="@string/figlet" />
    </group>

    <group android:id="@+id/more">
        <item
            android:id="@+id/action_share"
            android:icon="@drawable/ic_share_white_24dp"
            android:title="@string/share_app" />

        <item
            android:id="@+id/action_rate"
            android:icon="@drawable/ic_star_white_24dp"
            android:title="@string/rate_app"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_more_app"
            android:icon="@drawable/ic_play_store_black"
            android:title="@string/more_app_from_dev"
            app:showAsAction="never" />
    </group>
</menu>