<?xml version="1.0" encoding="utf-8"?><!--
  ~     Copyright (C) 2018 Tran Le Duy
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share_white_24dp"
        android:title="@string/share"
        app:showAsAction="always">

    </item>
    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_save_white_24dp"
        android:title="@string/save"
        android:visible="false"
        app:showAsAction="always">

    </item>
    <item
        android:id="@+id/action_gallery"
        android:icon="@drawable/ic_collections_white_24dp"
        android:title="@string/gallery"
        app:showAsAction="ifRoom">

    </item>
</menu>