<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="4dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:id="@+id/share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:contentDescription="@string/share"
                android:foreground="?attr/selectableItemBackground"
                android:padding="8dp"
                app:srcCompat="@drawable/ic_share_white_24dp" />

            <ImageView
                android:id="@+id/copy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:contentDescription="@string/copy"
                android:foreground="?attr/selectableItemBackground"
                android:padding="8dp"
                app:srcCompat="@drawable/ic_content_copy_white_24dp" />

            <ImageView
                android:id="@+id/img_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:clickable="true"
                android:contentDescription="@string/save_as_image"
                android:foreground="?attr/selectableItemBackground"
                android:padding="8dp"
                app:srcCompat="@drawable/ic_add_to_photos_white_24dp" />
        </LinearLayout>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:editable="false"
                android:inputType="textMultiLine|textNoSuggestions"
                android:paddingBottom="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textIsSelectable="true" />
        </HorizontalScrollView>
    </LinearLayout>
</android.support.v7.widget.CardView>
